# global-air-quality-intelligence-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_DESIGN.md  README.md  pyproject.toml
config/: config.local.yaml  config.yaml
docs/implementation/: phase1_infrastructure.md  phase2_data_generation.md  phase3_batch_pipeline.md  phase4_transformation.md  phase5_streaming.md  phase6_data_quality.md  phase7_monitoring.md  phase8_testing.md
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/streaming/: main.tf  outputs.tf  variables.tf
scripts/: verify_docker_env.sh  verify_setup.sh
src/common/: __init__.py  config.py  constants.py  exceptions.py  logger.py
src/common/aws/: __init__.py  client_factory.py
src/common/utils/: __init__.py  datetime_utils.py  paths.py  retry.py  string_utils.py  validators.py
tests/unit/: test_aws_client_factory.py  test_config.py  test_constants.py  test_datetime_utils.py  test_exceptions.py  test_logger.py  test_paths.py  test_string_utils.py  test_validators.py
